--- a/Lab1/Excercises/list1.ipynb
+++ b/Lab1/Excercises/list1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -15,14 +15,16 @@
     "# and last chars of the string are the same.\n",
     "# Note: python does not have a ++ operator, but += works.\n",
     "def match_ends(words):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    summ = 0 \n",
+    "    for w in words: \n",
+    "        if (len(w)!=0) and ((w[0] == w[-1]) and len(w) >= 2): \n",
+    "            summ += 1 \n",
+    "    return summ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -37,14 +39,29 @@
     "# before combining them.\n",
     "def front_x(words):\n",
     "  # +++your code here+++\n",
-    "  return\n",
+    "  temp = [] \n",
+    "  print (len(words))\n",
+    "  for i in range(0, len(words)):\n",
+    "      print (i)\n",
+    "      if words[i][0] == 'x':\n",
+    "            temp.append(words[i])\n",
+    "            #words.pop(i)\n",
+    "  words = sorted(words)\n",
+    "  temp = sorted(temp)\n",
+    "  for w in words: \n",
+    "    if w not in temp: \n",
+    "        temp.append(w)\n",
+    "  #temp.extend(words)\n",
+    "    \n",
+    "  return temp \n",
     "\n",
-    "\n"
+    "\n",
+    "#print (front_x(['mix', 'xyz', 'apple', 'xanadu', 'aardvark'] ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -56,15 +73,18 @@
     "# e.g. [(1, 7), (1, 3), (3, 4, 5), (2, 2)] yields\n",
     "# [(2, 2), (1, 3), (3, 4, 5), (1, 7)]\n",
     "# Hint: use a custom key= function to extract the last element form each tuple.\n",
+    "def lastEl(t):\n",
+    "    return t[-1]\n",
+    "\n",
     "def sort_last(tuples):\n",
     "  # +++your code here+++\n",
-    "  return\n",
+    "  return sorted(tuples, key = lastEl)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -83,11 +103,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "match_ends\n",
+      " OK  got: 3 expected: 3\n",
+      " OK  got: 2 expected: 2\n",
+      " OK  got: 1 expected: 1\n",
+      "\n",
+      "front_x\n",
+      "5\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      " OK  got: ['xaa', 'xzz', 'axx', 'bbb', 'ccc'] expected: ['xaa', 'xzz', 'axx', 'bbb', 'ccc']\n",
+      "5\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      " OK  got: ['xaa', 'xcc', 'aaa', 'bbb', 'ccc'] expected: ['xaa', 'xcc', 'aaa', 'bbb', 'ccc']\n",
+      "5\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      " OK  got: ['xanadu', 'xyz', 'aardvark', 'apple', 'mix'] expected: ['xanadu', 'xyz', 'aardvark', 'apple', 'mix']\n",
+      "\n",
+      "sort_last\n",
+      " OK  got: [(2, 1), (3, 2), (1, 3)] expected: [(2, 1), (3, 2), (1, 3)]\n",
+      " OK  got: [(3, 1), (1, 2), (2, 3)] expected: [(3, 1), (1, 2), (2, 3)]\n",
+      " OK  got: [(2, 2), (1, 3), (3, 4, 5), (1, 7)] expected: [(2, 2), (1, 3), (3, 4, 5), (1, 7)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Calls the above functions with interesting inputs.\n",
     "\n",
@@ -115,13 +174,23 @@
     "test(sort_last([(1, 7), (1, 3), (3, 4, 5), (2, 2)]),\n",
     "     [(2, 2), (1, 3), (3, 4, 5), (1, 7)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
