--- a/Lab1/Excercises/list2.ipynb
+++ b/Lab1/Excercises/list2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,14 +14,16 @@
     "# so [1, 2, 2, 3] returns [1, 2, 3]. You may create a new list or\n",
     "# modify the passed in list.\n",
     "def remove_adjacent(nums):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    l = []\n",
+    "    for w in nums: \n",
+    "        if len(l) == 0 or l[-1] != w:\n",
+    "            l.append(w)\n",
+    "    return l "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -32,32 +34,30 @@
     "# Ideally, the solution should work in \"linear\" time, making a single\n",
     "# pass of both lists.\n",
     "def linear_merge(list1, list2):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    i, j = 0, 0 \n",
+    "    l = []\n",
+    "    while i < len(list1) and j < len(list2):\n",
+    "        if list1[i] < list2[j]: \n",
+    "            l.append(list1[i])\n",
+    "            i += 1; \n",
+    "        else: \n",
+    "            l.append(list2[j])\n",
+    "            j += 1 \n",
+    "    \n",
+    "    while i < len(list1): \n",
+    "        l.append(list1[i])\n",
+    "        i += 1 \n",
+    "    \n",
+    "    while j < len(list2): \n",
+    "        l.append(list2[j])\n",
+    "        j += 1 \n",
+    "    \n",
+    "    return l "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Note: the solution above is kind of cute, but unforunately list.pop(0)\n",
-    "# is not constant time with the standard python list implementation, so\n",
-    "# the above is not strictly linear time.\n",
-    "# An alternate approach uses pop(-1) to remove the endmost elements\n",
-    "# from each list, building a solution list which is backwards.\n",
-    "# Then use reversed() to put the result back in the correct order. That\n",
-    "# solution works in linear time, but is more ugly.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -76,11 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remove_adjacent\n",
+      " OK  got: [1, 2, 3] expected: [1, 2, 3]\n",
+      " OK  got: [2, 3] expected: [2, 3]\n",
+      " OK  got: [] expected: []\n",
+      "\n",
+      "linear_merge\n",
+      " OK  got: ['aa', 'bb', 'cc', 'xx', 'zz'] expected: ['aa', 'bb', 'cc', 'xx', 'zz']\n",
+      " OK  got: ['aa', 'bb', 'cc', 'xx', 'zz'] expected: ['aa', 'bb', 'cc', 'xx', 'zz']\n",
+      " OK  got: ['aa', 'aa', 'aa', 'bb', 'bb'] expected: ['aa', 'aa', 'aa', 'bb', 'bb']\n"
+     ]
+    }
+   ],
    "source": [
     "# Calls the above functions with interesting inputs.\n",
     "print 'remove_adjacent'\n",
@@ -97,13 +113,23 @@
     "test(linear_merge(['aa', 'aa'], ['aa', 'bb', 'bb']),\n",
     "     ['aa', 'aa', 'aa', 'bb', 'bb'])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
