--- a/Lab1/Excercises/string1.ipynb
+++ b/Lab1/Excercises/string1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,14 +18,13 @@
     "# and donuts(23) returns 'Number of donuts: many'\n",
     "# Look for string format function\n",
     "def donuts(count):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    postfix = str(count) if count < 10 else 'many'\n",
+    "    return 'Number of donuts: ' + postfix "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -37,14 +36,12 @@
     "# so 'spring' yields 'spng'. However, if the string length\n",
     "# is less than 2, return instead the empty string.\n",
     "def both_ends(s):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    return '' if len(s) < 2 else (s[:2] + s[-2:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -60,14 +57,13 @@
     "# Hint: s.replace(stra, strb) returns a version of string s\n",
     "# where all instances of stra have been replaced by strb.\n",
     "def fix_start(s):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    temp = s.replace(s[0], '*')\n",
+    "    return s[0] + temp[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -81,14 +77,13 @@
     "#   'dog', 'dinner' -> 'dig donner'\n",
     "# Assume a and b are length 2 or more.\n",
     "def mix_up(a, b):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    x, y = a[:2], b[:2]\n",
+    "    return y+a[2:]+' ' + x+b[2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -103,16 +98,47 @@
     "    prefix = '  X '\n",
     "  print '%s got: %s expected: %s' % (prefix, repr(got), repr(expected))\n",
     "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "donuts\n",
+      " OK  got: 'Number of donuts: 4' expected: 'Number of donuts: 4'\n",
+      " OK  got: 'Number of donuts: 9' expected: 'Number of donuts: 9'\n",
+      " OK  got: 'Number of donuts: many' expected: 'Number of donuts: many'\n",
+      " OK  got: 'Number of donuts: many' expected: 'Number of donuts: many'\n",
+      "\n",
+      "both_ends\n",
+      " OK  got: 'spng' expected: 'spng'\n",
+      " OK  got: 'Helo' expected: 'Helo'\n",
+      " OK  got: '' expected: ''\n",
+      " OK  got: 'xyyz' expected: 'xyyz'\n",
+      "\n",
+      "fix_start\n",
+      " OK  got: 'ba**le' expected: 'ba**le'\n",
+      " OK  got: 'a*rdv*rk' expected: 'a*rdv*rk'\n",
+      " OK  got: 'goo*le' expected: 'goo*le'\n",
+      " OK  got: 'donut' expected: 'donut'\n",
+      "\n",
+      "mix_up\n",
+      " OK  got: 'pox mid' expected: 'pox mid'\n",
+      " OK  got: 'dig donner' expected: 'dig donner'\n",
+      " OK  got: 'spash gnort' expected: 'spash gnort'\n",
+      " OK  got: 'fizzy perm' expected: 'fizzy perm'\n"
+     ]
+    }
+   ],
    "source": [
     "# Provided main() calls the above functions with interesting inputs,\n",
     "# using test() to check if each result is correct or not.\n",
@@ -146,13 +172,22 @@
     "test(mix_up('gnash', 'sport'), 'spash gnort')\n",
     "test(mix_up('pezzy', 'firm'), 'fizzy perm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
