--- a/Lab1/Excercises/string2.ipynb
+++ b/Lab1/Excercises/string2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -18,14 +18,14 @@
     "# If the string length is less than 3, leave it unchanged.\n",
     "# Return the resulting string.\n",
     "def verbing(s):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    if len(s) < 3: \n",
+    "        return s\n",
+    "    return s + ('ing' if (s[-3:] != 'ing') else 'ly')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -40,14 +40,17 @@
     "# So 'This dinner is not that bad!' yields:\n",
     "# This dinner is good!\n",
     "def not_bad(s):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    i = s.find('not')\n",
+    "    j = s.find('bad')\n",
+    "    res = s \n",
+    "    if (i != -1 and j != -1 and j > i): \n",
+    "        res = s[:i] + 'good' + s[j+len('bad'):]\n",
+    "    return res "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -61,14 +64,14 @@
     "# Given 2 strings, a and b, return a string of the form\n",
     "#  a-front + b-front + a-back + b-back\n",
     "def front_back(a, b):\n",
-    "  # +++your code here+++\n",
-    "  return\n",
-    "\n"
+    "    afront, aback = a[:(len(a)+1)/2], a[(len(a)+1)/2:]\n",
+    "    bfront, bback = b[:(len(b)+1)/2], b[(len(b)+1)/2:]\n",
+    "    return afront + bfront + aback + bback "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +90,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "verbing\n",
+      " OK  got: 'hailing' expected: 'hailing'\n",
+      " OK  got: 'swimingly' expected: 'swimingly'\n",
+      " OK  got: 'do' expected: 'do'\n",
+      "\n",
+      "not_bad\n",
+      " OK  got: 'This movie is good' expected: 'This movie is good'\n",
+      " OK  got: 'This dinner is good!' expected: 'This dinner is good!'\n",
+      " OK  got: 'This tea is not hot' expected: 'This tea is not hot'\n",
+      " OK  got: \"It's bad yet not\" expected: \"It's bad yet not\"\n",
+      "\n",
+      "front_back\n",
+      " OK  got: 'abxcdy' expected: 'abxcdy'\n",
+      " OK  got: 'abcxydez' expected: 'abcxydez'\n",
+      " OK  got: 'KitDontenut' expected: 'KitDontenut'\n"
+     ]
+    }
+   ],
    "source": [
     "# main() calls the above functions with interesting inputs,\n",
     "# using the above test() to check if the result is correct or not.\n",
@@ -113,13 +138,23 @@
     "test(front_back('abcde', 'xyz'), 'abcxydez')\n",
     "test(front_back('Kitten', 'Donut'), 'KitDontenut')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
