Replaced with half-completed notebook file

--- a/Lab2/Exercise/Dictionaries and Lists.ipynb
+++ b/Lab2/Exercise/Dictionaries and Lists.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "## Lab-2 Exercise - Dictionaries and Lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,26 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def file_to_list(file_name):\n",
-    "    return"
+    "def file_to_list(fname):\n",
+    "    # your code here\n",
+    "    f = open(fname, 'r')\n",
+    "    s = f.read()\n",
+    "    f.close()\n",
+    "    return s.split()\n",
+    "\n",
+    "l1 = file_to_list('chap1.txt')\n",
+    "l2 = file_to_list('chap2.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def make_dictionary(list_of_words):\n",
-    "    return"
+    "    d = dict()\n",
+    "    for w in list_of_words:\n",
+    "        d[w] = d.get(w, 0) + 1\n",
+    "    return d \n",
+    "d1 = make_dictionary(l1)\n",
+    "d2 = make_dictionary(l2)"
    ]
   },
   {
@@ -55,14 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def combine_dict(list_of_dictionaries):\n",
-    "    return"
+    "    res = dict() \n",
+    "    for d in list_of_dictionaries: \n",
+    "        for pair in d.items(): \n",
+    "            res[pair[0]] = res.get(pair[0], 0) + pair[1]\n",
+    "    return res \n",
+    "\n",
+    "d1d2 = combine_dict([d1, d2])"
    ]
   },
   {
@@ -75,14 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "def getKey(t): \n",
+    "    return t[0]\n",
+    "\n",
+    "def getVal(t):\n",
+    "    return t[1]\n",
+    "\n",
     "def sort_dictionary(dictionary, on_keys = True, assending = True):\n",
-    "    return"
+    "    keyfunc = lambda t: getKey(t) if (on_keys == True) else getVal(t) \n",
+    "    return sorted(dictionary.items(), key = keyfunc, reverse= not assending)\n",
+    "\n",
+    "d1d2sorted = sort_dictionary(d1d2)"
    ]
   },
   {
@@ -93,14 +124,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# write your answer here #"
+    "Because there's no concept of sorting in hashmaps since there's a mapping involved and mapping would again shuffle the keys. "
    ]
   },
   {
@@ -121,14 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def files_to_dict(folder_name):\n",
-    "    return"
+    "def files_to_dict(folder_name, date1, date2):\n",
+    "    d = dict()\n",
+    "    for y in xrange(date1, date2+1):\n",
+    "        \n",
+    "        fname = folder_name+'/yob'+str(y)+'.txt'\n",
+    "        lines = [tuple((line.rstrip('\\r\\n')).split(',')) for line in open(fname)]\n",
+    "        d[y] = lines\n",
+    "\n",
+    "    return d\n",
+    "d1 = files_to_dict('names', 1880, 2014)"
    ]
   },
   {
@@ -261,9 +298,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
