1a part done; except the last task

--- a/Assignments/Assignment01/Assignment_1a.ipynb
+++ b/Assignments/Assignment01/Assignment_1a.ipynb
@@ -41,15 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -144,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2017-02-13 20:14:00--  http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
+      "--2017-02-22 16:23:00--  http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.249\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.249|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4551 (4.4K) [text/plain]\n",
-      "Saving to: ‘iris.data’\n",
+      "Saving to: ‘iris.data.1’\n",
       "\n",
       "100%[======================================>] 4,551       --.-K/s   in 0.003s  \n",
       "\n",
-      "2017-02-13 20:14:01 (1.50 MB/s) - ‘iris.data’ saved [4551/4551]\n",
+      "2017-02-22 16:23:01 (1.70 MB/s) - ‘iris.data.1’ saved [4551/4551]\n",
       "\n"
      ]
     }
@@ -167,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -266,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -332,24 +323,23 @@
    "source": [
     "#Write your code here\n",
     "norms = []\n",
+    "\n",
     "for feature in datalist:\n",
     "    norm = 0.0 \n",
     "    for example in feature: \n",
     "        norm += example**2\n",
     "    norm = norm**(1./2)\n",
     "    norms.append(norm)\n",
-    "    for i in xrange(len(feature)): \n",
-    "        feature[i] = feature[i]/norm \n",
-    "        #print feature[i]\n",
-    "\n",
-    "#print '========='        \n",
+    "        \n",
     "from itertools import izip\n",
     "prod = 0.0\n",
     "for f1, f2 in izip(datalist[0], datalist[1]):\n",
     "    #print f1, f2\n",
     "    prod += f1 * f2;\n",
     "\n",
-    "print 'cosine similarity =', prod"
+    "prod = prod / (norms[0] * norms[1] * 1.)\n",
+    "print 'cosine similarity =', prod\n",
+    "ans2 = prod "
    ]
   },
   {
@@ -363,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -375,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "short petal length probability = 0.657718120805\n"
+      "Answer = 0.657718120805\n"
      ]
     }
    ],
@@ -383,9 +373,10 @@
     "#Write your code here\n",
     "numfound = 0 \n",
     "for example in datalist[0]:\n",
-    "    if example < (4.9 / (norms[0])): \n",
+    "    if example < (4.9): \n",
     "        numfound += 1\n",
-    "print 'short petal length probability =', numfound / (1. * len(datalist[0]))"
+    "ans3 = numfound / (1. * len(datalist[0]))\n",
+    "print 'Answer =', ans3 "
    ]
   },
   {
@@ -399,16 +390,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer = 0.135818962094\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "def fact(x): \n",
+    "    return 1 if (x == 0) else x*fact(x-1)\n",
+    "\n",
+    "def binomial(k, n, p):\n",
+    "    a = (p ** k) * ((1-p)**(n-k))\n",
+    "    b = (1. * fact(n))/(fact(k)*fact(n-k))\n",
+    "    return a*b \n",
+    "\n",
+    "ans4 = binomial(15, 20, ans3)\n",
+    "print \"Answer =\", ans4"
    ]
   },
   {
@@ -422,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -434,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "short petal width probability = 0.651006711409\n"
+      "Answer = 0.651006711409\n"
      ]
     }
    ],
@@ -442,9 +451,10 @@
     "#Write your code here\n",
     "numfound = 0 \n",
     "for example in datalist[1]:\n",
-    "    if example < (1.6 / (norms[1])): \n",
+    "    if example < (1.6): \n",
     "        numfound += 1\n",
-    "print 'short petal width probability =', numfound / (1. * len(datalist[0]))"
+    "ans5 = numfound / (1. * len(datalist[0]))\n",
+    "print 'Answer =', ans5"
    ]
   },
   {
@@ -459,17 +469,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer = 0.0108763028729\n"
+     ]
+    }
+   ],
    "source": [
     "#Write your code here, use summation instead of integral, \n",
-    "# you are not authorized to use scipy.stats function for this and later parts..."
+    "# you are not authorized to use scipy.stats function for this and later parts...\n",
+    "import math \n",
+    "def gausspdf(x, sigma, mu):\n",
+    "    a = 1./(sigma * (2 * math.pi)**(1./2))\n",
+    "    b = -1 * (((x-mu)**2)/(2*sigma**2))\n",
+    "    return a*(math.e**b)\n",
+    "\n",
+    "petallengths = datalist[0]\n",
+    "mu = 0.0\n",
+    "for length in petallengths: \n",
+    "    mu += length \n",
+    "mu = (1. * mu) / len(petallengths)\n",
+    "\n",
+    "sigma = 0.0\n",
+    "for length in petallengths: \n",
+    "    sigma += (length-mu)**2\n",
+    "sigma = (1. * sigma) / len(petallengths)\n",
+    "\n",
+    "#print mu, sigma \n",
+    "base = abs(5.7-5.6)\n",
+    "#height = \n",
+    "height = gausspdf(5.6, sigma, mu)\n",
+    "ans6 = base * height; \n",
+    "print 'Answer =', ans6"
    ]
   },
   {
@@ -483,16 +524,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer = 0.0108763028729\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "print 'Answer =', ans6"
    ]
   },
   {
@@ -506,16 +556,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability (P.L = 5.4) = 0.00112804282404\n",
+      "Probability (P.L = 3.9) = 0.00129604438502\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "epsilon = .01\n",
+    "base = epsilon \n",
+    "height1 = gausspdf(5.4, sigma, mu)\n",
+    "ans81 = base * height1\n",
+    "\n",
+    "height2 = gausspdf(3.9, sigma, mu)\n",
+    "ans82 = base * height2\n",
+    "print 'Probability (P.L = 5.4) =', ans81\n",
+    "print 'Probability (P.L = 3.9) =', ans82"
    ]
   },
   {
@@ -528,19 +596,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer = [36, 13, 0, 3, 8, 26, 29, 18, 11, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "def buildHistogram(feature, nbins):\n",
     "    \"\"\" Histogram the feature into number of bins \"\"\"\n",
     "    #Write your code here    \n",
-    "    "
+    "    minyet = feature[0]\n",
+    "    maxyet = feature[0]\n",
+    "    for f in feature: \n",
+    "        minyet = f if (f < minyet) else minyet \n",
+    "        maxyet = f if (f > maxyet) else maxyet \n",
+    "    \n",
+    "    bwidth = (maxyet-minyet)/nbins\n",
+    "    ans9 = [0] * nbins\n",
+    "    for f in feature: \n",
+    "        #print f, int((f-minyet)/bwidth)\n",
+    "        i = int((f-minyet)/bwidth)\n",
+    "        i = i if i < nbins else i-1\n",
+    "        ans9[i] += 1\n",
+    "        \n",
+    "    return ans9\n",
+    "#print type(datalist[0][0])\n",
+    "ans9 = buildHistogram(datalist[0], 10)\n",
+    "print 'Answer =', ans9"
    ]
   },
   {
@@ -553,21 +646,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.6000000000000001, 4.4000000000000004, 5.0999999999999996, 6.9000000000000004]\n"
+     ]
+    }
+   ],
    "source": [
     "def getQuantile(features):\n",
     "    \"\"\" Function returns the four quantile of the given feature vector in a list \"\"\"    \n",
     "    quartile=[0]*4\n",
+    "    import math \n",
+    "    percentiles = [.25, .50, .75, 1]\n",
+    "    x = sorted(features)\n",
+    "    for i, p in enumerate(percentiles):\n",
+    "        #print int(math.ceil(p*len(features))), len(features)\n",
+    "        quartile[i] = x[int(math.ceil(p*len(features)))-1]\n",
     "    #Write your code here    \n",
-    "    \n",
-    "    return quartile"
+    "    return quartile\n",
+    "\n",
+    "ans10 = getQuantile(datalist[0])\n",
+    "print ans10 "
    ]
   },
   {
@@ -580,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -589,7 +698,21 @@
    },
    "outputs": [],
    "source": [
-    "#Write your code here  "
+    "#Write your code here  \n",
+    "def getOutliers(l):\n",
+    "    ls = sorted(l)\n",
+    "    #print ls \n",
+    "    q1index = int(((25.* len(ls))/100)) -1\n",
+    "    q3index = int(((75.* len(ls))/100)) -1 \n",
+    "    #print q1index, q3index\n",
+    "    q1, q3 = ls[q1index], ls[q3index]\n",
+    "    for i, e in enumerate(l): \n",
+    "        if e < (q1 - (1.5 * (q3-q1))) or e > (q3 + (1.5 * (q3-q1))):\n",
+    "            print i\n",
+    "    return None\n",
+    "\n",
+    "getOutliers(datalist[0])\n",
+    "getOutliers(datalist[1])"
    ]
   },
   {
@@ -608,16 +731,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.61744966443 0.0402684563758 0.0335570469799 0.308724832215\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here  "
+    "#Write your code here  \n",
+    "def getJoint(l1, l2, c1, c2): \n",
+    "    count = 0 \n",
+    "    for i in xrange(len(l1)):\n",
+    "        if l1[i] == c1 and l2[i] == c2: \n",
+    "            count += 1\n",
+    "    ans = (count * 1.) / len(l1)\n",
+    "    return ans \n",
+    "\n",
+    "PL = []\n",
+    "PW = []\n",
+    "for i in xrange(len(datalist[0])):\n",
+    "    PL.append(datalist[0][i] >= 4.9)\n",
+    "    PW.append(datalist[1][i] >= 1.6)\n",
+    "\n",
+    "\n",
+    "ans12a = getJoint(PL, PW, False, False)\n",
+    "ans12b = getJoint(PL, PW, False, True)\n",
+    "ans12c = getJoint(PL, PW, True, False)\n",
+    "ans12d = getJoint(PL, PW, True, True)\n",
+    "\n",
+    "print ans12a, ans12b, ans12c, ans12d "
    ]
   },
   {
@@ -630,15 +782,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.342281879195\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getMarg(l1, c1):\n",
+    "    count = 0 \n",
+    "    for e in l1: \n",
+    "        if e == c1: \n",
+    "            count += 1\n",
+    "    ans = (count * 1.) / len(l1)\n",
+    "    return ans \n",
+    "\n",
+    "ans13 = getMarg(PL, True)\n",
+    "print ans13"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -656,16 +827,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0604026845638 0.0201342281879 0.255033557047 0.0268456375839\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "def getJoint(l1, l2, l3, l4, c1, c2, c3, c4): \n",
+    "    count = 0 \n",
+    "    for i in xrange(len(l1)):\n",
+    "        if l1[i] == c1 and l2[i] == c2 and l3[i] == c3 and l4[i] == c4: \n",
+    "            count += 1\n",
+    "    ans = (1. * count) / len(l1)\n",
+    "    return ans \n",
+    "\n",
+    "dl2 = list(datalist)\n",
+    "dl2.append(list(data['SepalLength'].dropna()))\n",
+    "dl2.append(list(data['SepalWidth'].dropna()))\n",
+    "SL, SW = [], []\n",
+    "for i in xrange(len(dl2[2])):\n",
+    "    SL.append(dl2[2][i] > 7.1)\n",
+    "    SW.append(dl2[3][i] > 3.1)\n",
+    "\n",
+    "ans14a = getJoint(PL, PW, SL, SW, 1, 1, 0, 1)\n",
+    "ans14b = getJoint(PL, PW, SL, SW, 0, 1, 0, 1)\n",
+    "ans14c = getJoint(PL, PW, SL, SW, 0, 0, 0, 1)\n",
+    "ans14d = getJoint(PL, PW, SL, SW, 1, 1, 1, 1)\n",
+    "print ans14a, ans14b, ans14c, ans14d"
    ]
   },
   {
@@ -680,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "run_control": {
