--- a/Assignments/Assignment01/Assignment_1a.ipynb
+++ b/Assignments/Assignment01/Assignment_1a.ipynb
@@ -135,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2017-02-22 16:23:00--  http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
+      "--2017-02-22 22:37:50--  http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.249\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.249|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4551 (4.4K) [text/plain]\n",
-      "Saving to: ‘iris.data.1’\n",
+      "Saving to: ‘iris.data.7’\n",
       "\n",
       "100%[======================================>] 4,551       --.-K/s   in 0.003s  \n",
       "\n",
-      "2017-02-22 16:23:01 (1.70 MB/s) - ‘iris.data.1’ saved [4551/4551]\n",
+      "2017-02-22 22:37:50 (1.63 MB/s) - ‘iris.data.7’ saved [4551/4551]\n",
       "\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -684,12 +684,13 @@
    "metadata": {},
    "source": [
     "#### Task11: Univariate Analysis\n",
-    "Find the outliers in the features petal length and width. Comment on how you have decided on the features which are outliers."
+    "Find the outliers in the features petal length and width. Comment on how you have decided on the features which are outliers.\n",
+    "#### Answer: Any value below Q1 - 1.5(Q3-Q1) or above Q3 + 1.5(Q3-Q1) is taken as an outlier. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -782,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -848,7 +849,11 @@
     "def getJoint(l1, l2, l3, l4, c1, c2, c3, c4): \n",
     "    count = 0 \n",
     "    for i in xrange(len(l1)):\n",
-    "        if l1[i] == c1 and l2[i] == c2 and l3[i] == c3 and l4[i] == c4: \n",
+    "        t1 = True if (c1 == None) else (c1 == l1[i])\n",
+    "        t2 = True if (c2 == None) else (c2 == l2[i])\n",
+    "        t3 = True if (c3 == None) else (c3 == l3[i])\n",
+    "        t4 = True if (c4 == None) else (c4 == l4[i])\n",
+    "        if t1 and t2 and t3 and t4:\n",
     "            count += 1\n",
     "    ans = (1. * count) / len(l1)\n",
     "    return ans \n",
@@ -880,17 +885,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0872483221477 0.275167785235\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "ans15a = getJoint(PL, PW, None, SW, 1, 1, None, 1)\n",
+    "ans15b = getJoint(PL, None, None, SW, 0, None, None, 1)\n",
+    "\n",
+    "print ans15a, ans15b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
