--- a/Labtasks/Lab5/Exercise/baby-names.ipynb
+++ b/Labtasks/Lab5/Exercise/baby-names.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -54,12 +54,36 @@
     }
    ],
    "source": [
-    "%pylab inline"
+    "%pylab inline\n",
+    "import re\n",
+    "import os \n",
+    "\n",
+    "from collections import defaultdict\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['baby2004.html', 'baby1990.html', 'baby2008.html', 'baby1996.html', 'baby1998.html', 'baby2006.html', 'baby2000.html', 'baby2002.html', 'baby1992.html', 'baby1994.html']\n"
+     ]
+    }
+   ],
+   "source": [
+    "listfiles = os.listdir('./data/')\n",
+    "print listfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -69,79 +93,42 @@
     "    \"\"\"\n",
     "      Given a file name for baby.html, returns a list starting with the year string\n",
     "      followed by the name-rank strings in alphabetical order.\n",
-    "      ['2006', 'Aaliyah 91', Aaron 57', 'Abagail 895', ' ...]\n",
+    "      ['2006', 'Aaliyah 91', Aaron 57', 'Abagail 895', ' .ipynb_checkpoints/baby-names-checkpoint.ipynb..]\n",
     "    \"\"\"\n",
     "    # +++your code here+++\n",
+    "    out = []\n",
+    "    data = open(filename, 'r').read()\n",
+    "    \n",
+    "    year = re.search('\\d\\d\\d\\d', filename)\n",
+    "    out.append(year.group())\n",
+    "    \n",
+    "    listbody = re.findall(r'<td.*>(\\d*)</td><td.*>(\\w*)</td><td.*>(\\w*)</td>', data)\n",
+    "    \n",
+    "    malenames = [(int(x[0]), x[1]) for x in listbody]\n",
+    "    femalenames = [(int(x[0]), x[2]) for x in listbody]\n",
+    "    allnames = malenames + femalenames \n",
+    "    \n",
+    "    allnames = sorted(allnames, key = lambda x: x[1])\n",
+    "    allnames = [x[1] + ' ' + str(x[0]) for x in allnames]\n",
+    "    out = out + allnames \n",
+    "    return out\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import re\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import tools as t # tools is my written python file for included utils...\n",
-    "from collections import defaultdict # you might find defaultdict(list) as a good starting point"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Get list of files\n",
-    "listfiles=t.get_files('./data/','html',True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./data/baby1990.html', './data/baby1992.html', './data/baby1994.html', './data/baby1996.html', './data/baby1998.html', './data/baby2000.html', './data/baby2002.html', './data/baby2004.html', './data/baby2006.html', './data/baby2008.html']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print listfiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "# For each filename, get the names, then either print the text output\n",
-    "# or write it to a \n",
-    "\n",
-    "#Your Code goes here..."
+    "# or write it to a\n",
+    "yearsranking = []\n",
+    "for fname in listfiles:\n",
+    "    yearsranking.append(extract_names('./data/'+fname))"
    ]
   },
   {
@@ -159,8 +146,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -174,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
