2a - Best features decided

--- a/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
@@ -925,6 +925,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "43\n",
+      "44\n",
+      "42\n",
+      "43\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "featcombo = [[x, y] for x in xrange(Xtrain.shape[1]) for y in xrange(x+1, Xtrain.shape[1])]\n",
+    "bestcombo = featcombo[0]\n",
+    "bestmatches = 0\n",
+    "for f in featcombo: \n",
+    "    gb.train(Xtrain[:, f], Ytrain)\n",
+    "    pclasses, _ = gb.test(Xtest[:, f])\n",
+    "    if bestmatches < np.sum(pclasses == Ytest): \n",
+    "        bestcombo = f\n",
+    "        bestmatches = np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
