2b - Added prior factor in class scores, and selected the best pair of features

--- a/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -934,12 +934,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36\n",
-      "43\n",
-      "44\n",
-      "42\n",
-      "43\n",
-      "45\n"
+      "Best features combination = [2, 3] with accuracy 100.0\n"
      ]
     }
    ],
@@ -952,7 +947,9 @@
     "    pclasses, _ = gb.test(Xtest[:, f])\n",
     "    if bestmatches < np.sum(pclasses == Ytest): \n",
     "        bestcombo = f\n",
-    "        bestmatches = np"
+    "        bestmatches = np.sum(pclasses == Ytest)\n",
+    "print 'Best features combination =', bestcombo, \n",
+    "print 'with accuracy', (bestmatches * 100.) / len(Ytest)"
    ]
   },
   {
