--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -109,13 +109,13 @@
     "            out.append(res)\n",
     "        #out.append(res) if (res != '') else pass\n",
     "    #raise NotImplementedError()\n",
-    "    print out \n",
+    "    #print out \n",
     "    return out "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -141,16 +141,54 @@
     "        read file as raw string (with \\n, \\t, \\r, etc included)\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    return"
+    "    with open(filename, 'r') as f:\n",
+    "        out = f.read()\n",
+    "    #raise NotImplementedError()\n",
+    "    return out \n",
+    "    #return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file(name[, mode[, buffering]]) -> file object\n",
+      "\n",
+      "Open a file.  The mode can be 'r', 'w' or 'a' for reading (default),\n",
+      "writing or appending.  The file will be created if it doesn't exist\n",
+      "when opened for writing or appending; it will be truncated when\n",
+      "opened for writing.  Add a 'b' to the mode for binary files.\n",
+      "Add a '+' to the mode to allow simultaneous reading and writing.\n",
+      "If the buffering argument is given, 0 means unbuffered, 1 means line\n",
+      "buffered, and larger numbers specify the buffer size.  The preferred way\n",
+      "to open a file is with the builtin open() function.\n",
+      "Add a 'U' to mode to open the file for input with universal newline\n",
+      "support.  Any line ending in the input file will be seen as a '\\n'\n",
+      "in Python.  Also, a file so opened gains the attribute 'newlines';\n",
+      "the value for this attribute is one of None (no newline read yet),\n",
+      "'\\r', '\\n', '\\r\\n' or a tuple containing all the newline types seen.\n",
+      "\n",
+      "'U' cannot be combined with 'w' or '+' mode.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print file.__doc__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6d2b49b37e798724777c6c429add90f1",
@@ -172,18 +210,22 @@
     "        \n",
     "        Returns:\n",
     "        --------\n",
-    "        X as a numpy array with each row containing a read string from the file...\n",
+    "        OUT as a numpy array with each row containing a read string from the file...\n",
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    out = []\n",
+    "    for f in X: \n",
+    "        res = parse_file(f)\n",
+    "        out.append(res)\n",
+    "    #raise NotImplementedError()\n",
     "    \n",
-    "    return"
+    "    return np.array(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -196,20 +238,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-42858a464022>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mstrings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles_to_strings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"./data/imdb1/neg/cv000_29416.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"./data/imdb1/pos/cv000_29590.txt\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/imdb1/neg/cv000_29416.txt\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-4937d593bcc0>\u001b[0m in \u001b[0;36mfiles_to_strings\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nose.tools import assert_equal, assert_list_equal\n",
     "\n",
@@ -223,6 +252,50 @@
     "\n",
     "assert_equal(strings[0], text, \"At first index should be text of first file\")\n",
     "assert_equal(strings.shape, (2,), \"Shape must be (2,) for two files in list\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "films adapted from comic books have had plenty of success , whether they're about superheroes ( batm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['films',\n",
+       " 'adapted',\n",
+       " 'from',\n",
+       " 'comic',\n",
+       " 'books',\n",
+       " 'have',\n",
+       " 'had',\n",
+       " 'plenty',\n",
+       " 'of',\n",
+       " 'success',\n",
+       " 'whether',\n",
+       " 'theyre',\n",
+       " 'about',\n",
+       " 'superheroes',\n",
+       " 'batm']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print strings[1][:100]\n",
+    "parse_string(strings[1][:100])"
    ]
   },
   {
